added head element

--- a/image_gallery.html
+++ b/image_gallery.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html lang="en">
+<head>
 <meta charset="utf-8">
   <title>The Joe Adee Band - Gallery</title>
+</head>
 <body>
 <header>
 	<h1>The Joe Adee Band</h1>
