replaced png with jpg

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
 	</nav>		
 </header>
 
-	<img src="images/joe_silht_1.png" width="960" height="720" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+	<img src="images/joe_silht.jpg" width="960" height="720" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
 
-	<img src="images/logo.png" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+	<img src="images/logo.jpg" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
 	
 <header>
 	<h2>Drop Us A Line!</h2>
