WK2 edits and additions

--- a/concert_dates.html
+++ b/concert_dates.html
@@ -1,42 +1,59 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href='http://fonts.googleapis.com/css?family=Simonetta:400,900,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
 <meta charset="utf-8">
   <title>The Joe Adee Band - Upcoming Events</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header>
 	<h1>The Joe Adee Band</h1>
 	<nav>
 		<ul>
-			<li><a href="index.html">home</a></li>
-			<li><a href="concert_dates.html">upcoming events</a></li>
-			<li><a href="image_gallery.html">gallery</a></li>
-			<li><a href="contact.html">contact</a></li>
+			<li class="inline"><a href="index.html">home</a></li>
+			<li class="inline"><a href="concert_dates.html">upcoming events</a></li>
+			<li class="inline"><a href="image_gallery.html">gallery</a></li>
+			<li class="inline"><a href="contact.html">contact</a></li>
 		</ul>
 	</nav>		
 </header>
 
-	<img src="images/joe_silht.jpg" width="960" height="720" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+<section class id="logo">
 
-	<img src="images/logo.jpg" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+	<img src="images/logo.png" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+
+</section>
+
+<section class id="logo2">
+
+	<img src="images/joe_silht_2.png" width="320" height="240" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+	
+</section>
+	
+<div id="clearFix"></div>
 	
 <header>
 	<h2>Upcoming Events</h2>
+</header>
+
+<aside>
+		
+<p>Joe and the gang opened for <em>Big &amp; Rich</em> at the Friday Night Block Party at the Times Union Center</p>
+
+		<img src="images/Times_Union_Center_2013.jpg" width="280" height="187" alt="Formerly Pepsi Arena" title="Times Union Center">
+		<h4>Times Union Center</h4>
+		<p>The Times Union Center is located in downtown, Albany, New York.</p>
+</aside>
+
 	<ul>
 			<li>March 15 - <em> Celtic Inn </em> Rhinebeck, NY</li>
 			<li>March 23 - <em> Jackson's </em> Hudson, NY</li>
 			<li>April 13 - <em> Smokin' Joe's BBQ &amp; Grill </em> East Greenbush, NY</li>
 			<li>April 22 - <em> Live at Five </em> Corning Preserve, Albany, NY</li>
 		</ul>
-</header>
-<p>Joe and the gang opened for <em>Big &amp; Rich</em> at the Friday Night Block Party at the Times Union Center</p>
 
-	<aside>
-		<img src="images/Times_Union_Center_2013.jpg" width="280" height="187" alt="Formerly Pepsi Arena" title="Times Union Center">
-		<h4>Times Union Center</h4>
-		<p>The Times Uniom Center is located in downtown, Albany, New York.</p>
-</aside>
 <footer>
 	<nav>
 			<a href="index.html">home</a>
