--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,62 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href='http://fonts.googleapis.com/css?family=Simonetta:400,900,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
 <meta charset="utf-8">
   <title>The Joe Adee Band - Contact Info</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header>
 	<h1>The Joe Adee Band</h1>
 	<nav>
 		<ul>
-			<li><a href="index.html">home</a></li>
-			<li><a href="concert_dates.html">upcoming events</a></li>
-			<li><a href="image_gallery.html">gallery</a></li>
-			<li><a href="contact.html">contact</a></li>
+			<li class="inline"><a href="index.html">home</a></li>
+			<li class="inline"><a href="concert_dates.html">upcoming events</a></li>
+			<li class="inline"><a href="image_gallery.html">gallery</a></li>
+			<li class="inline"><a href="contact.html">contact</a></li>
 		</ul>
 	</nav>		
 </header>
 
-	<img src="images/joe_silht.jpg" width="960" height="720" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+<section class id="logo">
 
-	<img src="images/logo.jpg" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+	<img src="images/logo.png" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+
+</section>
+
+<section class id="logo2">
+
+	<img src="images/joe_silht_2.png" width="320" height="240" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
 	
+</section>
+	
+
+<div id="clearFix"></div>
+
+
 <header>
 	<h2>Drop Us A Line!</h2>
+</header>
 	
 	
-	<div>
-			<h3>Postal Address:</h3>
+			<h4>Postal Address:</h4>
 				<p> The Joe Adee Band</p>
 				<p> PO Box 1234</p>
 				<p> Ghent, NY  12075</p>
-	</div>
-	
-	<div>
-			<h3>email:</h3>
+
+			<h4>email:</h4>
 			<p> The_Joe_Adee_Band@gmail.com</p>
 			
-	</div>
 	
 	<section>
 		
-		<h4>Sign up for the Blue's Shack Newsletter</h4>
+		<h3>Sign up for the Blue's Shack Newsletter</h3>
 	
 			<p>Just send us an email with <em>Blue's Shack News </em> in the subject line and you'll be kept up to date with the latest info.</p>
 			
 	</section>
-
-</header>
 
 <footer>
 	<nav>
