--- a/index.html
+++ b/index.html
@@ -1,82 +1,101 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href='http://fonts.googleapis.com/css?family=Simonetta:400,900,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
 <meta charset="utf-8">
   <title>The Joe Adee Band</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header>
 	<h1>The Joe Adee Band</h1>
 	<nav>
 		<ul>
-			<li><a href="index.html">home</a></li>
-			<li><a href="concert_dates.html">upcoming events</a></li>
-			<li><a href="image_gallery.html">gallery</a></li>
-			<li><a href="contact.html">contact</a></li>
+			<li class="inline"><a href="index.html">home</a></li>
+			<li class="inline"><a href="concert_dates.html">upcoming events</a></li>
+			<li class="inline"><a href="image_gallery.html">gallery</a></li>
+			<li class="inline"><a href="contact.html">contact</a></li>
 		</ul>
 	</nav>		
 </header>
 
-	<img src="images/joe_silht.jpg" width="960" height="720" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+<section class id="logo">
 
-	<img src="images/logo.jpg" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+	<img src="images/logo.png" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+
+</section>
+
+<section class id="logo2">
+
+	<img src="images/joe_silht_2.png" width="320" height="240" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+	
+</section>
 	
 
-<article>
+<div id="clearFix"></div>
+
 
 <header>
 	<h2>Joe's Bio</h2>
-	<h3>From:</h3><p> Ghent, NY</p>
-	<h3>Genre:</h3><p> Country, Blues, Rock</p>
+</header>
+
+
+<article id="main">
+
+	<h4>From:</h4><p> Ghent, NY</p>
+	<h4>Genre:</h4><p> Country, Blues, Rock</p>
+	
+<div>	
 	<p>Joe has played from Plattsburgh, NY to Nashville, TN. His style is a mix of Blues with a bit of Comedy. 
 	Inspired by artists like B.B.King, Buddy Guy, Steve Ray Vaughn, Jimmy Hendrix, Allman Brothers and Ray Stevens, 
 	you never know what to expect from Joe.</p>
-</header>
+	
+	<p>Born and raised in New York State.  He's been and played in Nashville, Tennessee several times until his first record deal. 
+	The private company requested $18,000 upfront from Joe. He felt unsure about the deal and started promoting himself with a local agency in the northeast.<p>
+	 <p>Joe Adee Band has done many benefits to raise money for people with cancer, accident victims, and other tragic happenings. 
+	 At one benefit concert in 2007 the band raised over 11,000$ for a breast cancer victim. Rhythm guitarist Larry DeVine, most folks think he looks like Jerry Garcia, 
+	 but drinks like an old Irish man. 
+	<p>Paco/drummer/Jason joined the band when original drummer did not show up. We found him selling sea shells on the beach playing bongos for tourists. (aka Rockin' Paco). 
+	Also Chad Cristman from Long Island plays drums. Did a drum solo for 23 minutes when Nate Smith the bass player fell asleep. (Smokin' Chad) Many bass players play with the band. Recent bass player from Nassau, Norm Milton(aka Stormin' Norman) Shaky Bill Chester on harmonica sits in for Joe sometimes. Shaky Bill got roughed up by an 81 year old woman on stage in 2007 when Bill would not play "The Saints Go Marching In". 
+	All the songs are original and written by the band from 1991-now. Throughout all the years of playing live on stage and in the recording studio Joe says Roadkill Stew is his favorite song they've wrote because it's the song people request the most and there was a man in town who the song was actually written about.<p>
+</div>
 
 </article>
 
+
+<header>
+	<h2>The Band</h2>
+</header>
+
 <aside>
 
-	<h2><a href="contact.html">Sign up for the Blue's Shack Newsletter!</a></h2>
+	<h2 id="button"><a href="contact.html">Sign up for the Blue's Shack Newsletter!</a></h2>
 		<p>Keep up to date on the latest events, news and releases.</p>
 		
 </aside>
 
-
 <section>
-
-<header>
-	<h2>The Band</h2>
-<div>	
-	<h3>Joe <em>"Country Boy" </em>Adee:</h3>
+		
+	<h4>Joe <em>"Country Boy" </em>Adee:</h4>
 	<img src="images/Joe_acoustic_1.jpg" width="474" height="439" alt="Joe Benefit Concert" title="Joe Adee">
 	<p>Singer / Song Writer, Lead Vocal, Acoustic and Electric Guitars, Harmonica</p>
-</div>
 	
-<div>
-	<h3>Bill <em>"Angus" </em>Mullen:</h3>
+	<h4>Bill <em>"Angus" </em>Mullen:</h4>
 	<img src="images/Bill_Mullen.jpg" width="488" height="447" alt="Bill Mullen at Arena" title="Bill Mullen">
-	<p>Lead / Electric Guitars</p>
-</div>	
+	<p>Lead / Electric Guitars</p>	
 	
-<div>
-	<h3>Bill <em>"Shaky" </em>Chester:</h3>
+	<h4>Bill <em>"Shaky" </em>Chester:</h4>
 	<img src="images/Bill_Chester.jpg" width="250" height="189" alt="Bill Chester at Arena" title="Bill Chester">
-	<p>Harmonica, Percussion</p>
-</div>	
+	<p>Harmonica, Percussion</p>	
 
-<div>
-	<h3><em>"Metronome" </em>Jason Vasquez:</h3>
+	<h4><em>"Metronome" </em>Jason Vasquez:</h4>
 	<img src="images/drummer.jpg" width="373" height="290" alt="Jason Vasquez at Arena" title="Jason Vasquez">
 	<p>Drums</p>
-</div>
 
-<div>
-	<h3>Nate <em>"DJ Tornato" </em>Smith:</h3>
+	<h4>Nate <em>"DJ Tornato" </em>Smith:</h4>
 	<img src="images/Nate_Smith_1.jpg" width="242" height="493" alt="Nate at Arena" title="Nate Smith">
 	<p>Bass Guitar, Backing Vocals, Keyboards, Percussion</p>
-</div>
-</header>
 
 </section>
 	
