--- a/image_gallery.html
+++ b/image_gallery.html
@@ -1,37 +1,53 @@
 <!doctype html>
 <html lang="en">
 <head>
+<link href='http://fonts.googleapis.com/css?family=Simonetta:400,900,400italic' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Inder' rel='stylesheet' type='text/css'>
 <meta charset="utf-8">
   <title>The Joe Adee Band - Gallery</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header>
 	<h1>The Joe Adee Band</h1>
 	<nav>
 		<ul>
-			<li><a href="index.html">home</a></li>
-			<li><a href="concert_dates.html">upcoming events</a></li>
-			<li><a href="image_gallery.html">gallery</a></li>
-			<li><a href="contact.html">contact</a></li>
+			<li class="inline"><a href="index.html">home</a></li>
+			<li class="inline"><a href="concert_dates.html">upcoming events</a></li>
+			<li class="inline"><a href="image_gallery.html">gallery</a></li>
+			<li class="inline"><a href="contact.html">contact</a></li>
 		</ul>
 		
 	</nav>		
 </header>
 
-	<img src="images/joe_silht.jpg" width="960" height="720" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
+<section class id="logo">
 
-	<img src="images/logo.jpg" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+	<img src="images/logo.png" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
+
+</section>
+
+<section class id="logo2">
+
+	<img src="images/joe_silht_2.png" width="320" height="240" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
 	
+</section>
+	
+<div id="clearFix"></div>
+
 <header>
 	<h2>Image Gallery</h2>
-	<ul>
-			<li><img src="images/Joe_acoustic_1.jpg" width="474" height="439" alt="Joe Benefit Concert" title="Joe Adee"></li>
-			<li><img src="images/Bill_Mullen.jpg" width="488" height="447" alt="Bill Mullen at Arena" title="Bill Mullen"></li>
-			<li><img src="images/Bill_Chester.jpg" width="250" height="189" alt="Bill Chester at Arena" title="Bill Chester">></li>
-			<li><img src="images/drummer.jpg" width="373" height="290" alt="Jason Vasquez at Arena" title="Jason Vasquez"></li>
-			<li><img src="images/Nate_Smith_1.jpg" width="242" height="493" alt="Nate at Arena" title="Nate Smith"></li>
-		</ul>
 </header>
+
+<section>
+	<ul>
+			<li class="inline"><a href="images/Joe_acoustic_1.jpg"><img src="images/Joe_acoustic_1.jpg" width="237" height="220" alt="Joe Benefit Concert" title="Joe Adee"></li>
+			<li class="inline"><a href="images/Bill_Mullen.jpg"><img src="images/Bill_Mullen.jpg" width="244" height="224" alt="Bill Mullen at Arena" title="Bill Mullen"></li>
+			<li class="inline"><a href="images/Bill_Chester.jpg"><img src="images/Bill_Chester.jpg" width="125" height="95" alt="Bill Chester at Arena" title="Bill Chester"></li>
+			<li class="inline"><a href="images/drummer.jpg"><img src="images/drummer.jpg" width="181" height="143" alt="Jason Vasquez at Arena" title="Jason Vasquez"></li>
+			<li class="inline"><a href="images/Nate_Smith_1.jpg"><img src="images/Nate_Smith_1.jpg" width="121" height="245" alt="Nate at Arena" title="Nate Smith"></li>
+		</ul>
+</section>
 
 <footer>
 	<nav>
