--- a/image_gallery.html
+++ b/image_gallery.html
@@ -41,11 +41,11 @@
 
 <section>
 	<ul>
-			<li class="inline"><a href="images/Joe_acoustic_1.jpg"><img src="images/Joe_acoustic_1.jpg" width="237" height="220" alt="Joe Benefit Concert" title="Joe Adee"></li>
-			<li class="inline"><a href="images/Bill_Mullen.jpg"><img src="images/Bill_Mullen.jpg" width="244" height="224" alt="Bill Mullen at Arena" title="Bill Mullen"></li>
-			<li class="inline"><a href="images/Bill_Chester.jpg"><img src="images/Bill_Chester.jpg" width="125" height="95" alt="Bill Chester at Arena" title="Bill Chester"></li>
-			<li class="inline"><a href="images/drummer.jpg"><img src="images/drummer.jpg" width="181" height="143" alt="Jason Vasquez at Arena" title="Jason Vasquez"></li>
-			<li class="inline"><a href="images/Nate_Smith_1.jpg"><img src="images/Nate_Smith_1.jpg" width="121" height="245" alt="Nate at Arena" title="Nate Smith"></li>
+			<li class="inline"><a href="images/Joe_acoustic_1.jpg"><img src="images/G_Joe_acoustic.jpg" alt="Joe Benefit Concert" title="Joe Adee"></li>
+			<li class="inline"><a href="images/Bill_Mullen.jpg"><img src="images/G_Bill_Mullen.jpg" alt="Bill Mullen at Arena" title="Bill Mullen"></li>
+			<li class="inline"><a href="images/Bill_Chester.jpg"><img src="images/G_Bill_Chester.jpg" alt="Bill Chester at Arena" title="Bill Chester"></li>
+			<li class="inline"><a href="images/drummer.jpg"><img src="images/G_drummer.jpg" alt="Jason Vasquez at Arena" title="Jason Vasquez"></li>
+			<li class="inline"><a href="images/Nate_Smith.jpg"><img src="images/G_Nate_Smith.jpg" alt="Nate at Arena" title="Nate Smith"></li>
 		</ul>
 </section>
 
