--- a/concert_dates.html
+++ b/concert_dates.html
@@ -47,12 +47,37 @@
 		<p>The Times Union Center is located in downtown, Albany, New York.</p>
 </aside>
 
-	<ul>
-			<li>March 15 - <em> Celtic Inn </em> Rhinebeck, NY</li>
-			<li>March 23 - <em> Jackson's </em> Hudson, NY</li>
-			<li>April 13 - <em> Smokin' Joe's BBQ &amp; Grill </em> East Greenbush, NY</li>
-			<li>April 22 - <em> Live at Five </em> Corning Preserve, Albany, NY</li>
-		</ul>
+<section>		
+<table summary="Concert Dates">
+	<tr>
+		<th>Date</th>
+		<th>Venue</th>
+		<th>Location</th>
+	</tr>
+	<tr>
+		<td>March 15</td>
+		<td>Celtic Inn</td>
+		<td>Rhinebeck, NY</td>
+	</tr>
+	<tr class="even">
+		<td>March 23</td>
+		<td>Jackson's</td>
+		<td>Hudson, NY</td>
+	</tr>
+	<tr>
+		<td>April 13</td>
+		<td>Smokin' Joe's BBQ &amp; Grill</td>
+		<td>East Greenbush, NY</td>
+	</tr>
+	<tr class="even">
+		<td>April 22</td>
+		<td>Live at Five</td>
+		<td>Albany, NY</td>
+	</tr>
+
+</table>
+</section>
+
 
 <footer>
 	<nav>
