--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,62 @@
 		
 		<h3>Sign up for the Blue's Shack Newsletter</h3>
 	
-			<p>Just send us an email with <em>Blue's Shack News </em> in the subject line and you'll be kept up to date with the latest info.</p>
+			<p>Just send us an email with <em>Blue's Shack News </em> in the subject line and you'll be kept up to date with the latest info or fill out the form below.</p>
+	<form method="post" action="mailto:The_Joe_Adee_Band@gmail.com">
+	
+	
+		<div>
+			<label for="name_first">First Name</label>
+			<input type="text" name="name_first" id="name_first"/>
 			
-	</section>
+		</div>
+		
+		<div>
+			<label for="name_last">Last Name</label>
+			<input type="text" name="name_last" id="name_last"/>
+			
+		</div>
+		
+		<div>
+			<label for="email">Email Address</label>
+			<input type="text" name="email" id="email"/>
+			
+			</div>
+			
+		<div>
+			<label for="regarding">Regarding</label>
+			
+			</div>
+			
+		<div>
+			<select name="regarding" id="regarding">
+				<option>General Inquiry</option>
+				<option>Newsletter</option>
+				<option>Purchase Merchandise</option>
+				<option>Suggestion</option>
+			</select>
+		
+		</div>
+			
+	<div>
+		<label for="message">Message</label>
+			<textarea rows="15" cols="50" name="message" id="message"></textarea>
+	
+	</div>
+	
+	<div>
+		<input type="checkbox" name="opt_in" id="opt_in"/>
+		<p>Yes, sign me up!<p>
+	
+	</div>
+	
+<div>
+		<button type="submit" name="submit" class="button">Send Message</button>
+	
+	</div>
+	</form>		
+			
+</section>
 
 <footer>
 	<nav>
