--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 	</nav>		
 </header>
 
-<section class id="logo">
+<section id="logo">
 
 	<img src="images/logo.png" width="405" height="54" alt="The Joe Adee Band Logo" title="The Joe Adee Band Logo">
 
 </section>
 
-<section class id="logo2">
+<section id="logo2">
 
 	<img src="images/joe_silht_2.png" width="320" height="240" alt="Joe Adee with guitar in silhoutte" title="Joe Adee">
 	
